syntax = "proto3";

package pb;
option go_package = "./pb";

message Wallet {
    uint64 wallet = 1;
    uint64 exchange = 2;
    uint64 coin = 3;
    string amount = 4;
}

message WalletWithCoin {
    uint64 wallet = 1;
    uint64 exchange = 2;
    uint64 coin = 3;
    string amount = 4;
    string symbol = 6;
    bool active = 7;
}

message GetWalletWithCoinResponse {
    Wallet wallet = 1;
    uint64 coin = 2;
    string symbol = 3;
    bool active = 4;
}

message GetWalletWithCoinRequest {
    uint64 exchange = 1;
    uint64 coin = 2;
}

message ListWalletWithCoinResponse {
    repeated WalletWithCoin wallet = 1;
}

message ListWalletWithCoinRequest {
    uint64 exchange = 1;
}

message CreateWalletRequest {
    uint64 wallet = 1;
    uint64 exchange = 2;
    uint64 coin = 3;
    string amount = 4;
}

message CreateWalletResponse {
    Wallet wallet = 1;
}

message UpdateWalletRequest {
    repeated Wallet wallet = 1;
}

message UpdateWalletResponse {
    repeated Wallet wallet = 1;
}
